# cmd/apiserver/openapi/api_design_code_service.go
@@ -1,0 +1,57 @@
+/*
+ * Fledge REST API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"context"
+	"net/http"
+	"errors"
+	"os"
+)
+
+// DesignCodeApiService is a service that implents the logic for the DesignCodeApiServicer
+// This service should implement the business logic for every endpoint for the DesignCodeApi API. 
+// Include any external packages or services that will be required by this service.
+type DesignCodeApiService struct {
+}
+
+// NewDesignCodeApiService creates a default api service
+func NewDesignCodeApiService() DesignCodeApiServicer {
+	return &DesignCodeApiService{}
+}
+
+// GetDesignCode - Get a zipped design code file owned by user
+func (s *DesignCodeApiService) GetDesignCode(ctx context.Context, user string, design string) (ImplResponse, error) {
+	// TODO - update GetDesignCode with the required logic for this service method.
+	// Add api_design_code_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(200, *os.File{}) or use other options such as http.Ok ...
+	//return Response(200, *os.File{}), nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("GetDesignCode method not implemented")
+}
+
+// UpdateDesignCode - Update a design doce
+func (s *DesignCodeApiService) UpdateDesignCode(ctx context.Context, user string, design string, body *os.File) (ImplResponse, error) {
+	// TODO - update UpdateDesignCode with the required logic for this service method.
+	// Add api_design_code_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(201, {}) or use other options such as http.Ok ...
+	//return Response(201, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("UpdateDesignCode method not implemented")
+}
+
